EXTRA_DIST = \
	50_ipv4_network_setup \
	libicd_network_ipv4.script \
	00_leste_dns

maemo_dhcp_ddir = $(sysconfdir)/maemo-dhcp.d
dist_maemo_dhcp_d_SCRIPTS = 50_ipv4_network_setup

udhcpcdir = $(sysconfdir)/udhcpc
udhcpc_SCRIPTS = libicd_network_ipv4.script

dnsmasqdir = $(sysconfdir)/dnsmasq.d
dnsmasq_DATA = 00_leste_dns
